# gitrack

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  install.sh  rustfmt.toml
.github/workflows/: pr-dco.yml  pr-linux.yml
.gitrack/: config.toml
issues/: 019efe81-a1a9-7cf3-af45-3b0b90df558c.toml  019efe81-b7e4-7d41-a3d1-767c057a7575.toml  019efe96-f9e3-74f2-abc6-6b639c980018.toml  019efeae-5394-75f3-b2aa-eb0ae20bf441.toml  gitrack-1y4.toml  gitrack-6pz.toml  gitrack-7pr.toml  gitrack-89z.toml  gitrack-aa3.toml  gitrack-fl8.1.toml  gitrack-fl8.2.toml  gitrack-fl8.3.toml  gitrack-fl8.4.toml  gitrack-fl8.5.toml  gitrack-fl8.6.toml  gitrack-fl8.toml  gitrack-gby.toml  gitrack-gom.toml  gitrack-mw6.toml  gitrack-s1d.toml  gitrack-u0c.toml  gitrack-uqr.toml  gitrack-vee.toml  gitrack-wku.toml  gitrack-wxk.toml  gitrack-xny.toml  gitrack-ytr.toml  gitrack-zk2.toml  gitrack-zl9.toml
issues/issues-by-id/: 019efe53-702a-75f2-bdd2-77180fb5adde.toml  019efe81-a1a9-7cf3-af45-3b0b90df558c.toml  019efe81-b7e4-7d41-a3d1-767c057a7575.toml  019efe96-f9e3-74f2-abc6-6b639c980018.toml  019efeae-5394-75f3-b2aa-eb0ae20bf441.toml  019f02e4-13f5-7dc1-b59a-c0ed1663cfee.toml  019f034b-1cdd-77c2-b9c9-526175845692.toml  019f0377-d3ab-7e23-899f-90e60f8a4624.toml  019f03b6-1920-7c33-831d-d03281a24fe5.toml  019f03b9-ef17-7991-9c8d-c99c5666150b.toml  019f03fe-9370-7831-9c88-92f472bad236.toml  019f03fe-bd0f-7792-8200-ce45cbfdc14b.toml  (+13 more)
src/: agents.rs  beads_import.rs  commands.rs  error.rs  lib.rs  main.rs  model.rs  readiness.rs  store.rs  views.rs
tests/: cli.rs
