[package]
name = "gitrack"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = "0.8.6"
time = { version = "0.3.41", features = ["formatting", "parsing", "serde"] }
toml = "0.8.23"
uuid = { version = "1.17.0", features = ["serde", "v7"] }

[dev-dependencies]
tempfile = "3.20.0"
