[package]
name = "gitrack"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
toml = "0.8"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
tempfile = "3"
