[package]
name = "gitrack"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[features]
# Unsupported personal importer for Lars' current Beads export shape.
beads-import = []

[dependencies]
clap = { version = "4", features = ["derive"] }
lscolors = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
toml = "0.8"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
